# docs/api/api.yaml
@@ -12,6 +12,28 @@ servers:
     description: Production
 
 paths:
+  /v1/contacts:
+    post:
+      operationId: "create-contact"
+      description: Create contact
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/CreateContactRequest'
+      responses:
+        200:
+          description: Success
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/CreateContactResponse'
+      tags:
+        - contact
+      security:
+        - api_key: [ 'contact-read' ]
+
   /v1/contacts/search:
     post:
       operationId: "search-contact"
@@ -65,6 +87,21 @@ components:
       name: Authorization
 
   schemas:
+    CreateContactRequest:
+      type: object
+      properties:
+        contactId:
+          type: integer
+          format: int64
+          description: ID of the contact's account
+
+    CreateContactResponse:
+      type: object
+      properties:
+        id:
+          type: integer
+          format: int64
+
     ContactSummary:
       type: object
       properties:
@@ -75,7 +112,7 @@ components:
         contactId:
           type: integer
           format: int64
-          description: ID of the contact
+          description: ID of the contact's account
         created:
           type: string
           format: date-time
@@ -84,10 +121,11 @@ components:
     SearchContactRequest:
       type: object
       properties:
-        accountId:
-          type: integer
-          format: int64
-          description: ID of the account
+        contactIds:
+          type: array
+          items:
+            type: integer
+            format: int64
         limit:
           type: integer
           default: 30
