# src/main/kotlin/com/wutsi/platform/contact/dto/CreateContactRequest.kt
@@ -1,0 +1,7 @@
+package com.wutsi.platform.contact.dto
+
+import kotlin.Long
+
+public data class CreateContactRequest(
+    public val contactId: Long = 0
+)
