# src/main/kotlin/com/wutsi/platform/contact/dto/CreateContactResponse.kt
@@ -1,0 +1,7 @@
+package com.wutsi.platform.contact.dto
+
+import kotlin.Long
+
+public data class CreateContactResponse(
+    public val id: Long = 0
+)
