# src/main/kotlin/com/wutsi/platform/contact/dto/SearchContactRequest.kt
@@ -2,9 +2,10 @@ package com.wutsi.platform.contact.dto
 
 import kotlin.Int
 import kotlin.Long
+import kotlin.collections.List
 
 public data class SearchContactRequest(
-    public val accountId: Long = 0,
+    public val contactIds: List<Long> = emptyList(),
     public val limit: Int = 30,
     public val offset: Int = 0
 )
